# petepatrol

./: README.md  setup_pete_patrol.sh
inference/: inference.py  pyproject.toml
inference/yolo11n_ncnn_model/: metadata.yaml
src/aruco_tracker/: package.xml  setup.py
src/aruco_tracker/aruco_tracker/: aruco_tracker_node.py
src/custom_interfaces/: CMakeLists.txt  package.xml
src/launch/: pete_patrol_launch.yaml
src/person_tracker/: package.xml  setup.py
src/person_tracker/person_tracker/: person_tracker_node.py
src/pete_patrol/: package.xml  setup.cfg  setup.py
src/pete_patrol/pete_patrol/: ps5controller.py  ros2_drive.py  ros2_ps5controller.py
