[tool.poetry]
name = "yolotest"
version = "0.1.0"
description = ""
authors = ["ZachDaChampion"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
ultralytics = "^8.3.41"
torch = {url = "https://download.pytorch.org/whl/cpu/torch-2.5.1-cp310-cp310-manylinux_2_17_aarch64.manylinux2014_aarch64.whl#sha256=269b10c34430aa8e9643dbe035dc525c4a9b1d671cd3dbc8ecbcaed280ae322d"}
torchvision = {url = "https://download.pytorch.org/whl/cpu/torchvision-0.20.1-cp310-cp310-linux_aarch64.whl#sha256=75f8a4d51a593c4bab6c9bf7d75bdd88691b00a53b07656678bc55a3a753dd73"}
opencv-python = "^4.10.0.84"

[[tool.poetry.source]]
name = "pytorch_cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
